Sat Apr 16 01:36:41 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Objref_TypeCode_Factory.h (tc_objref_factory):

	  Fixed problem where created TypeCode was not returned to the
	  caller.

	* tao/TypeCode.cpp (equal):

	  Throw a CORBA::BAD_PARAM exception if the TypeCode argument is
	  nil.  Fixes a seg fault.

	* tao/TypeCode.inl (equivalent):

	  Likewise.

	  Moved this method out of line into `TypeCode.cpp'.  Avoids
	  including excessive headers in this file.

Sat Apr 16 00:10:27 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Value_TypeCode.h (type_modifer, concrete_base_type):
	* tao/Value_TypeCode.cpp (type_modifer, concrete_base_type):

	  Fixed these incorrect protected template method names.  The
	  method names are now "type_modifer_i" and
	  "concrete_base_type_i", respectively.  Addresses valuetype
	  extraction from CORBA::Any problems since the correct
	  implementations are now invoked polymorphically rather than the
	  default implementations that throw a CORBA::TypeCode::BadKind
	  exception.

Fri Apr 15 23:31:51 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Transport.cpp (dump_iov):

	  Fixed seg fault due to missing size_t ACE_DEBUG argument.

Fri Apr 15 09:58:50 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tao/PortableServer/Root_POA.cpp:

          Removed a build warning when building with minimum_corba=1.

Fri Apr 15 13:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Muxed_TMS.h:
          Doxygen improvement

        * tao/IIOP_Transport.cpp:
        * orbsvcs/orbsvcs/HTIOP/HTIOP_Transport.cpp:
        * orbsvsc/orbsvcs/SSLIOP/SSLIOP_Transport.cpp:
        * tao/Strategies/SCIOP_Transport.cpp:
          Fixed a bug with BiDIR GIOP. The spec describes that the originator
          should use even numbers, the other side odd numbers. It was just
          implemented the other way around in TAO. At the moment the first